# patine

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: output-style.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-markdown-rs-for-parsing.md  0003-direct-write-rendering-architecture.md  0004-terminal-width-wrapping.md  0005-syntax-highlighting-via-syntect-with-ansi-theme.md
src/: highlight.rs  lib.rs  main.rs  render.rs  table.rs  wrap.rs
tests/: rendering.rs
tests/fixtures/: showcase.md
tests/snapshots/: rendering__adjacent_bold_italic.snap  rendering__bare_autolink.snap  rendering__blockquote_multiple_paragraphs.snap  rendering__blockquote_nested.snap  rendering__blockquote_simple.snap  rendering__blockquote_with_emphasis.snap  rendering__bold_entire_paragraph.snap  rendering__bold_italic_text.snap  rendering__bold_text.snap  rendering__bold_with_trailing_space_before_closing.snap  rendering__bold_without_trailing_space.snap  rendering__code_block_basic.snap  rendering__code_block_between_paragraphs.snap  rendering__code_block_highlights_bash.snap  (+66 more)
todos/: 01knshxjy83n3qdjkvsxqzx6aw-url-wrapping-in-links-and-images.md  01knshxjy83n3qdjkvsxqzx6ax-effective-width-zero-floor.md  01knshxjy83n3qdjkvsxqzx6ay-table-ignores-renderer-state.md  01knshxjy83n3qdjkvsxqzx6az-write-indent-side-effects.md  01knshxjy83n3qdjkvsxqzx6b0-document-column-invariant.md  01knshxjy83n3qdjkvsxqzx6b1-nest-indent-width-uses-byte-len.md  01knshxjy83n3qdjkvsxqzx6b2-missing-test-coverage.md  01knshxjy83n3qdjkvsxqzx6b3-minor-cleanups.md
